Spot-By-Netapp/Spot-Admin/AWS/QuickStart/K8S-testapp/nginx-file-browser/nginx-file-browser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spotadmin-eks-alb
  namespace: default
  labels:
    purpose: handson
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginx-file-bro
