Spot-By-Netapp/Spot-Admin/AWS/QuickStart/K8S-testapp/nginx-file-browser/default-nginx-file-browser.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spotadmin-eks-alb
  namespace: default
  labels:
    purpose: handson
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginx-file-bro
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-file-bro
    alb: spotadmin-eks-alb
    purpose: handson
  name: nginx-file-bro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-file-bro
  template:
    metadata:
      labels:
        app: nginx-file-bro
        alb: spotadmin-eks-alb
    spec:
      containers:
      - image: docker.io/mohamnag/nginx-file-browser:latest
        name: nginx-file-browser
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - operator: In
                key: purpose
                values:
                - test
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: nginx
    alb.ingress.kubernetes.io/load-balancer-name: spotadmin-eks-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Name=spotadmin-eks-alb,owner=spotadmin
  name: spotadmin-eks-alb
  namespace: default
  labels:
    purpose: handson
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: spotadmin-eks-alb
            port:
              number: 80
        path: /
        pathType: Prefix
---
